leptos_macro/tests/view/57_children_only_missing.stderr
error[E0277]: component `Inner` requires children
  --> tests/view/57_children_only_missing.rs:11:14
   |
11 |             <Inner></Inner>
   |              ^^^^^ children required
   |
   = help: the trait `__required_Inner_children` is not implemented for `()`
   = note: add child elements between the opening and closing tags
help: the trait `__required_Inner_children` is implemented for `(__T,)`
  --> tests/view/57_children_only_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((),)>` to implement `Inner::__CheckPresence`
  --> tests/view/57_children_only_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<((),)>`, but its trait bounds were not satisfied
  --> tests/view/57_children_only_missing.rs:11:14
   |
11 |             <Inner></Inner>
   |              ^^^^^
...
16 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_children` was not satisfied
  --> tests/view/57_children_only_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
